reviews, news, about, contact

--- a/gd-demo/src/app/globals.css
+++ b/gd-demo/src/app/globals.css
@@ -3,7 +3,8 @@
 @tailwind utilities;
 
 body{
-  background-color: #ffffff;
+  background-color: #374151
+  /* background-color: #fff */
 }
 
 .red-gradient {
